[package]
name = "imgui-gfx-examples"
version = "0.0.0"
edition = "2018"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>", "imgui-rs contributors"]
description = "imgui crate examples"
homepage = "https://github.com/Gekkio/imgui-rs"
repository = "https://github.com/Gekkio/imgui-rs"
license = "MIT/Apache-2.0"
publish = false

[features]
opengl = []
directx = []
default = ["opengl"]

[dev-dependencies]
gfx = "0.18"
gfx_device_gl = "0.16"
gfx_window_glutin = "0.31"
glutin = "0.22.0-alpha3"
image = "0.21"
imgui = { version = "0.2.0-pre", path = "../" }
imgui-gfx-renderer = { version = "0.2.0-pre", path = "../imgui-gfx-renderer" }
imgui-winit-support = { version = "0.2.0-pre", path = "../imgui-winit-support" }

[target.'cfg(windows)'.dev-dependencies]
gfx_device_dx11 = "0.8"
gfx_window_dxgi = "0.19"

# [patch.crates-io]
# gfx = { git = "https://github.com/tangmi/gfx", branch = "update-winit-0.20" }
# gfx_core = { git = "https://github.com/tangmi/gfx", branch = "update-winit-0.20" }
# gfx_device_gl = { git = "https://github.com/tangmi/gfx", branch = "update-winit-0.20" }
# gfx_window_glutin = { git = "https://github.com/tangmi/gfx", branch = "update-winit-0.20" }
# gfx_device_dx11 = { git = "https://github.com/tangmi/gfx", branch = "update-winit-0.20" }
# gfx_window_dxgi = { git = "https://github.com/tangmi/gfx", branch = "update-winit-0.20" }
